--- a/package.json
+++ b/package.json
@@ -13,13 +13,19 @@
   "license": "ISC",
   "dependencies": {
     "@types/sqlite3": "^3.1.8",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "reflect-metadata": "^0.1.13",
+    "routing-controllers": "^0.9.0",
     "sqlite3": "^5.1.2",
     "typescript": "^4.9.3"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.14",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.11.9"
   }
 }
