--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/sqlite3": "^3.1.8",
+    "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "dotenv": "^16.0.3",
@@ -20,6 +22,7 @@
     "reflect-metadata": "^0.1.13",
     "routing-controllers": "^0.9.0",
     "sqlite3": "^5.1.2",
+    "typeorm": "^0.3.10",
     "typescript": "^4.9.3"
   },
   "devDependencies": {
