--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "npm run build:live",
     "build": "tsc -p .",
     "build:live": "nodemon --watch 'src/**/*.ts' --exec \"ts-node\" src/index.ts",
-    "server": "node dist/app.js"
+    "server-prd": "NODE_ENV=prd node dist/app.js",
+    "server-stg": "NODE_ENV=stg node dist/app.js",
+    "server-evl": "NODE_ENV=evl node dist/app.js"
   },
   "author": "",
   "license": "ISC",
