--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "@types/sqlite3": "^3.1.8",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.13.2",
+    "class-validator": "^0.14.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "reflect-metadata": "^0.1.13",
-    "routing-controllers": "^0.9.0",
+    "routing-controllers": "^0.10.2",
     "sqlite3": "^5.1.2",
     "typeorm": "^0.3.10",
     "typescript": "^4.9.3"
