--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "build:live": "nodemon --watch 'src/**/*.ts' --exec \"ts-node\" src/index.ts",
     "build-watch": "npx tsc --watch",
     "server-prd": "NODE_ENV=prd node dist/app.js",
-    "server-stg": "NODE_ENV=stg node dist/app.js",
     "server-evl": "NODE_ENV=evl node dist/app.js"
   },
   "author": "",
@@ -17,11 +16,11 @@
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/sqlite3": "^3.1.8",
+    "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "reflect-metadata": "^0.1.13",
     "routing-controllers": "^0.10.2",
@@ -33,6 +32,7 @@
     "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.14",
     "@types/multer": "^1.4.7",
-    "@types/node": "^18.11.9"
+    "@types/node": "^18.11.9",
+    "dotenv": "^16.0.3"
   }
 }
