--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "class-validator": "^0.14.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "firebase-admin": "^11.5.0",
     "reflect-metadata": "^0.1.13",
     "routing-controllers": "^0.10.2",
     "sqlite3": "^5.1.2",
