--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build:live": "nodemon --watch 'src/**/*.ts' --exec \"ts-node\" src/index.ts",
     "build-watch": "npx tsc --watch",
     "server-prd": "NODE_ENV=prd node dist/app.js",
-    "server-evl": "NODE_ENV=evl node dist/app.js"
+    "server-evl": "NODE_ENV=evl node dist/app.js",
+    "build-server": "npm run build && npm run server-prd"
   },
   "author": "",
   "license": "ISC",
@@ -21,6 +22,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cors": "^2.8.5",
+    "discord.js": "^14.8.0",
     "express": "^4.18.2",
     "firebase-admin": "^11.5.0",
     "reflect-metadata": "^0.1.13",
